# SQLSage

./: .env.example  .gitignore  BLOG.md  Dockerfile  MANUAL_NEXT_STEPS.md  Makefile  README.md  __init__.py  client.py  dashboard.py  docker-compose.yml  fix_training.py  models.py  monitor_training.py  openenv.yaml  pyproject.toml  requirements.txt  run.py  run_benchmark.py  test_phase14_integration.py  train.py
cheatsheets/: person1_env_engineer.html  person1_env_engineer.md  person2_reward_engineer.html  person2_reward_engineer.md  person3_training_lead.html  person3_training_lead.md
docker/: entrypoint-sqlsage.sh
docs/: PERSON3_PHASE8_MANUAL.md  PHASE8_CLOSEOUT_CHECKLIST.md
notebooks/: sqlsage_grpo_colab.ipynb
plots/: README_plots.md  generate_plots.py
results/: baseline_vs_trained.md
scripts/: check_db_connection.py  compare_rollouts.py  push_hf_fast.sh  push_hf_space.sh  push_model_to_hub.py  rollout_wandb.py  smoke_env.py  stress_env.py  train_grpo_with_env.py  training_stub.py
server/: app.py
sql/: bootstrap_tpch_schema.sql
sql/scripts/: drop_curriculum_indexes.sql
sqlsage/: __init__.py  anti_cheat.py  app.py  dashboard.py  dataset.py  env.py  explain_parser.py  generate_cheatsheets.py  monitoring.py  openenv_bridge.py  openenv_types.py  prompt_builder.py  reward.py  rewrite_patterns.py  run.py  status_checker.py  tpch.py  training_verifier.py
sqlsage/tasks/: __init__.py  level1.py  level2.py  level3.py
tests/: conftest.py  test_anti_cheat.py  test_anti_cheat_integration.py  test_explain_parser.py  test_prompt_builder.py  test_reward.py
(+6 files in other folders)
