[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlsage-env"
version = "0.1.0"
description = "RL environment for SQL query optimization via plan reading"
requires-python = ">=3.11"
dependencies = [
  "openenv-core>=0.2.0",
  "fastapi",
  "uvicorn",
  "psycopg2-binary",
  "pydantic",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
plots = ["matplotlib>=3.8", "numpy>=1.26", "wandb>=0.16"]
training = ["wandb>=0.16", "requests>=2.28", "huggingface_hub>=0.20"]
# monitor_training.py: W&B, colored tables, and local model sampling
monitor = [
  "wandb>=0.16",
  "transformers>=4.40",
  "rich>=13",
  "torch",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["sqlsage", "sqlsage.tasks", "sqlsage.training", "server"]
